fix more dots on safari and make it infinite

--- a/src/style/MoreDots.scss
+++ b/src/style/MoreDots.scss
@@ -1,72 +1,103 @@
 @import "./_vars";
 
 .more-dots {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   z-index: z("more-dots");
 
   .dot {
     position: absolute;
     border-radius: 100%;
     border: 1px solid $light-grey;
-    opacity: 0;
+    transform: translateY(100vh);
 
     @keyframes rise {
       to {
-        transform: translateY(-2000px);
+        transform: translateY(-100vh);
       }
     }
     @keyframes wobbleA {
+      0% {
+        margin-left: 0;
+      }
       50% {
-        transform: translateX(-13px);
+        margin-left: 12px;
       }
       100% {
-        transform: translateX(0);
+        margin-left: 0;
       }
     }
     @keyframes wobbleB {
-      50% {
-        transform: translateX(12px);
+      0% {
+        margin-left: 0;
+      }
+      45% {
+        margin-left: 8px;
       }
       100% {
-        transform: translateX(0);
+        margin-left: 0;
       }
     }
     @keyframes wobbleC {
-      50% {
-        transform: translateX(-11px);
+      0% {
+        margin-left: 0;
+      }
+      40% {
+        margin-left: 10px;
       }
       100% {
-        transform: translateX(0);
-      }
-    }
-    @keyframes wobbleD {
-      50% {
-        transform: translateX(10px);
-      }
-      100% {
-        transform: translateX(0);
-      }
-    }
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
+        margin-left: 0;
       }
     }
 
-    &:nth-child(4n) {
-      animation: fadeIn 1s ease forwards, wobbleA 9s ease-in-out infinite,
-        rise 90s linear forwards;
+    // Group 1
+    &:nth-child(12n) {
+      animation: wobbleA 5s ease-in-out infinite, rise 32s linear infinite;
     }
-    &:nth-child(4n + 1) {
-      animation: fadeIn 3s ease forwards, wobbleB 7s linear infinite,
-        rise 75s linear forwards;
+    &:nth-child(12n + 1) {
+      animation: wobbleB 5s ease-in-out 0.7s infinite, rise 28s linear infinite;
     }
-    &:nth-child(4n + 2) {
-      animation: fadeIn 5s ease forwards, wobbleC 5s linear infinite,
-        rise 75s linear forwards;
+    &:nth-child(12n + 2) {
+      animation: wobbleC 5s ease-in-out 1.5s infinite, rise 32s linear infinite;
     }
-    &:nth-child(4n + 3) {
-      animation: fadeIn 7s ease forwards, wobbleD 4s ease-in-out infinite,
-        rise 90s linear forwards;
+    // Group 2
+    &:nth-child(12n + 3) {
+      animation: wobbleA 5s ease-in-out infinite, rise 32s linear 8s infinite;
+    }
+    &:nth-child(12n + 4) {
+      animation: wobbleB 5s ease-in-out 0.5s infinite,
+        rise 28s linear 8s infinite;
+    }
+    &:nth-child(12n + 5) {
+      animation: wobbleC 5s ease-in-out 1s infinite, rise 32s linear 8s infinite;
+    }
+    // Group 3
+    &:nth-child(12n + 6) {
+      animation: wobbleA 5s ease-in-out infinite, rise 32s linear 16s infinite;
+    }
+    &:nth-child(12n + 7) {
+      animation: wobbleB 5s ease-in-out 0.5s infinite,
+        rise 28s linear 16s infinite;
+    }
+    &:nth-child(12n + 8) {
+      animation: wobbleC 5s ease-in-out 1s infinite,
+        rise 32s linear 16s infinite;
+    }
+    // Group 4
+    &:nth-child(12n + 9) {
+      animation: wobbleA 5s ease-in-out infinite, rise 32s linear 25s infinite;
+    }
+    &:nth-child(12n + 10) {
+      animation: wobbleB 5s ease-in-out 0.5s infinite,
+        rise 28s linear 25s infinite;
+    }
+    &:nth-child(12n + 11) {
+      animation: wobbleC 5s ease-in-out 1s infinite,
+        rise 32s linear 25s infinite;
     }
   }
 }
